--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "postcss-default-unit",
-    "version": "0.0.4",
+    "version": "0.0.5",
     "description": "PostCSS plugin that adds a default unit to numeric css properties",
-    "keywords": ["postcss", "css", "postcssplugin", "default", "unit"],
+    "keywords": ["postcss", "css", "postcss-plugin", "shortcut", "default", "unit"],
     "author": "Anton Yakushev <yakushevanton@gmail.com>",
     "license": "MIT",
     "repository": {
@@ -11,12 +11,12 @@
     },
     "dependencies": {
         "postcss": "^4.1.0",
-        "extend": "2.0.0"
+        "extend": "^2.0.0"
     },
     "devDependencies": {
-        "gulp-eslint": "0.8.0",
+        "gulp-eslint": "0.11.1",
         "gulp-mocha":  "2.0.1",
-        "chai":        "2.2.0",
+        "chai":        "2.3.0",
         "gulp":        "3.8.11"
     },
     "scripts": {
