--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,6 @@
     "rules": {
         "no-unused-expressions": [0],
         "no-underscore-dangle":  [0],
-        "no-reserved-keys":      [2],
         "no-multi-spaces":       [0],
         "no-extra-parens":       [2],
         "no-unused-vars":        [2],
@@ -11,6 +10,7 @@
         "max-len":               [2],
         "strict":                [0],
         "indent":                [2],
+        "quote-props":           [0],
         "quotes":                [2, "single", "avoid-escape"],
         "curly":                 [0]
     },
