--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
     "name": "postcss-default-unit",
-    "version": "1.0.0",
+    "version": "1.1.0",
     "description": "PostCSS plugin that adds a default unit to numeric css properties",
-    "keywords": ["postcss", "css", "postcss-plugin", "shortcut", "default", "unit"],
+    "keywords": [
+        "postcss",
+        "css",
+        "postcss-plugin",
+        "shortcut",
+        "default",
+        "unit"
+    ],
     "author": "Anton Yakushev <yakushevanton@gmail.com>",
     "license": "MIT",
     "repository": {
         "type": "git",
-        "url":  "https://github.com/antyakushev/postcss-default-unit.git"
+        "url": "https://github.com/antyakushev/postcss-default-unit.git"
     },
     "dependencies": {
         "postcss": "^5.0.0",
@@ -15,9 +22,9 @@
     },
     "devDependencies": {
         "gulp-eslint": "1.0.0",
-        "gulp-mocha":  "2.1.3",
-        "chai":        "3.2.0",
-        "gulp":        "3.9.0"
+        "gulp-mocha": "2.1.3",
+        "chai": "3.2.0",
+        "gulp": "3.9.0"
     },
     "scripts": {
         "test": "gulp"
